--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "express": "^4"
   },
   "devDependencies": {
-    "@cap-js/sqlite": "^1"
+    "@cap-js/sqlite": "^1",
+    "@sap/ux-specification": "^1.108.12"
   },
   "scripts": {
-    "start": "cds-serve"
-  }
+    "start": "cds-serve",
+    "watch-productionorders": "cds watch --open productionorders/webapp/index.html?sap-ui-xx-viewCache=false"
+  },
+  "sapux": [
+    "app/productionorders"
+  ]
 }
